# unical-locator-scraper

./: .gitignore  EXECUTION_PLAN.md  EXECUTION_STATUS.md  ModuleRules.md  README.md  SCRAPING_PHASE_PLAN_PROGRESS.md  SCRAPING_PHASE_PLAN_UNICAL.md  pyproject.toml
.github/workflows/: ci.yml
ai-docs/: context-budget.md  domain-language.md  macos-signing-tcc.md
data/corrections/: destructive_allowlist.yaml  manual_corrections.yaml
data/normalized/: aliases.json  aulas.json  buildings.json  dataset_contract.json  departments.json  entity_links.json  people.json  places.json  report.json  sources.json
data/schema/: aliases.schema.json  aulas.schema.json  building_entrances.schema.json  buildings.schema.json  dataset_contract.schema.json  departments.schema.json  entity_links.schema.json  faqs.schema.json  glossary.schema.json  people.schema.json  places.schema.json  sources.schema.json
data/supplements/: service_location_contract.json
docs/full-crawl-reliability/: plan.md  progress.md
scripts/: review_release_candidate.py
tests/: test_aliases.py  test_cli_aulas.py  test_cli_full.py  test_contract.py  test_coverage_gate.py  test_entity_links.py  test_extract_aulas.py  test_extract_buildings.py  test_extract_department_teacher_map.py  test_extract_departments.py  test_extract_departments_api.py  test_extract_services.py  test_extract_teachers.py  test_html_cache.py  test_ids.py  test_linking.py  test_manual_corrections_dataset.py  test_manual_corrections_rules.py  test_normalize.py  test_report.py  test_utils_http.py  test_validate.py
(+33 files in other folders)
